--- a/board/skin/default/mycomment.tmpl
+++ b/board/skin/default/mycomment.tmpl
@@ -35,7 +35,7 @@
 
 <tmpl_loop list>
 <ul class="article-list">
-  <li class="board2"><a href="read.cgi?bid=<tmpl_var board_id>"><tmpl_var board_title></a></li>
+  <li class="board2"><a href="mycomment.cgi?bid=<tmpl_var board_id>"><tmpl_var board_title></a></li>
   <li class="article"><a href="read.cgi?bid=<tmpl_var board_id>;aid=<tmpl_var article_id>"><tmpl_var article_title></a></li>
   <li class="comment"><a href="read.cgi?bid=<tmpl_var board_id>;aid=<tmpl_var article_id>;p=<tmpl_var page>#c<tmpl_var comment_no>"><tmpl_var comment></a></li>
   <li class="date"><span title="<tmpl_var created_str>"><tmpl_var created></span></li>
