Change of aesthetics
* Changed to U+2026 to spacer out the commentrefs

--- a/board/skin/default/_new_comment.tmpl
+++ b/board/skin/default/_new_comment.tmpl
@@ -41,7 +41,7 @@
 <ul class="comment" id="spacer">
 <li></li>
 <li class="author"></li>
-<li class="body text"></li>
+<li class="body text"><center>…</center></li>
 <li class="created"></li>
 <li class="delete"</li>
 </ul>
