Transformation of tweet link
* Tweet link is now stored as a embedded info (expansion)
* Embedded links are escaped

--- a/board/skin/default/read.tmpl
+++ b/board/skin/default/read.tmpl
@@ -146,4 +146,6 @@
 <tmpl_include _search_form.tmpl>
 </tmpl_if>
 
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+
 <tmpl_include _footer.tmpl>
