--- a/board/skin/default/_html_header.tmpl
+++ b/board/skin/default/_html_header.tmpl
@@ -34,8 +34,11 @@
   <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
   </script>
 
-
 <link rel="stylesheet" type="text/css" href="<tmpl_var board_url>/skin/default/litebox/lightbox.css" media="screen" />
+
+<link href="<tmpl_var board_url>/skin/default/prism.css" rel="stylesheet" />
+<script type="text/javascript" src="<tmpl_var board_url>/skin/default/prism.js"></script>
+
 <script type="text/javascript" src="<tmpl_var board_url>/skin/default/litebox/moo.fx.js"></script>
 <script type="text/javascript" src="<tmpl_var board_url>/skin/default/litebox/litebox-1.0.js"></script>
 <script type="text/javascript">//<![CDATA[
