--- a/main/skin/default/_html_header.tmpl
+++ b/main/skin/default/_html_header.tmpl
@@ -27,12 +27,7 @@
 
 <script type="text/javascript" src="<tmpl_var main_url>/skin/default/script.js"></script>
 <script type="text/javascript" src="<tmpl_var board_url>/skin/default/script.js"></script>
-
-<script type="text/x-mathjax-config">
-    MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-  </script>
-  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
-  </script>
+<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
 
 <link rel="stylesheet" type="text/css" href="<tmpl_var board_url>/skin/default/litebox/lightbox.css" media="screen" />
