Dark mode application
- Change skin and added darkmode
- Bug-fix of expiration routine

--- a/board/skin/default/_html_header.tmpl
+++ b/board/skin/default/_html_header.tmpl
@@ -20,7 +20,9 @@
 </tmpl_if>
 
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/prototype/1.6/prototype.js"></script>
+<style>:root { color-scheme: light dark }</style>
 <link rel="stylesheet" type="text/css" href="skin/<tmpl_if skin><tmpl_var skin><tmpl_else>default</tmpl_if>/style.css" />
+<link rel="stylesheet" type="text/css" media="(prefers-color-scheme: dark)" href="skin/default/dark_style.css" />
 <!--[if lt IE 8]>
 <link rel="stylesheet" type="text/css" href="<tmpl_var main_url>/skin/default/IE70Fixes.css" /><![endif]-->
 <!--[if lte IE 8]><style type="text/css"> #globalWrapper{font-family:"맑은 고딕",sans-serif;} </style><![endif]-->
