User profile sanity check
* Erroneous user profile items will be removed so no retrieval must be ensured.

--- a/user/skin/default/edit.tmpl
+++ b/user/skin/default/edit.tmpl
@@ -110,6 +110,7 @@
 <tmpl_var home_address1>
 <tmpl_var home_address2>
 <tmpl_var home_zipcode>, <tmpl_var home_country></tmpl_if></tmpl_if></textarea>
+    본인이 편한만큼만 쓰시되, 되도록 대한민국, 서울 / 독일, 프랑크푸르트 정도의 정보는 알려주세요.
     </td>
 </tr>
 <tr>
@@ -123,6 +124,7 @@
 <tmpl_var office_address1>
 <tmpl_var office_address2>
 <tmpl_var office_zipcode>, <tmpl_var office_country></tmpl_if></tmpl_if></textarea>
+    본인이 편한만큼만 쓰시되, 되도록 대한민국, 서울 / 독일, 프랑크푸르트 정도의 정보는 알려주세요.
     </td>
 </tr>
 <tr>
@@ -133,6 +135,7 @@
     <td class="lhead" nowrap>임시주소</td>
     <td class="iteml">
         <textarea name="temp_address" rows="3" cols="40" class="body" style="width:450px"><tmpl_var temp_address></textarea>
+    본인이 편한만큼만 쓰시되, 되도록 대한민국, 서울 / 독일, 프랑크푸르트 정도의 정보는 알려주세요.
     </td>
 </tr>
 <tr>
@@ -220,6 +223,9 @@ https://www.linkedin.com/in/[linkedin_user]/</td>
     <td class="iteml"><tmpl_var modified></td>
 </tr>
     </tmpl_loop>
+<tr>
+    <td colspan=2>상호주의를 위해 명백히 오류인 정보는 비주기적으로 삭제됩니다.</td>
+</tr>
 <tr>
     <td></td>
     <td><br><input type="submit" value="Save" class="button" style="width:450px"></td>
