Old registration minor updates
* NULL effect
* phrase change

--- a/reg/skin/default/index.tmpl
+++ b/reg/skin/default/index.tmpl
@@ -70,7 +70,7 @@
         그밖의 명예 동창 및 동창 가족의 가입이 가능해지면 별도의 공지를
         해드리겠습니다.
         <br><br>
-        <strong>신규가입하는 25기의 경우 대부분의 인원이 가입신청을 마치면 가입처리를 
+        <strong>신규가입하는 신입생 기수의 경우 대부분의 인원이 가입신청을 마치면 가입처리를 
         시작할 예정입니다.</strong>
     </div>
 
